--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi>=0.111.0
+fastapi==0.104.1
 uvicorn[standard]==0.24.0
-speechmatics-python==4.0.0
-websockets>=14.0
+websockets==12.0
+speechmatics-python==1.7.0
 httpx==0.25.2 
