--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 websockets==12.0
 speechmatics-python==1.7.0
-httpx==0.25.2 
+httpx==0.25.2
+openai==1.3.8 
